// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoaderInput should not render a loading spinner when loading prop is false 1`] = `
<DocumentFragment>
  <div
    class="loader-input__container"
  >
    <input
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`LoaderInput should render a loading spinner when loading prop is true 1`] = `
<DocumentFragment>
  <div
    class="loader-input__container"
  >
    <input
      type="text"
    />
    <loadingspinner
      class="loader-input__spinner"
    />
  </div>
</DocumentFragment>
`;
